--- a/src/main/resources/com/jayrodharv/digitaldesigner/main-view.fxml
+++ b/src/main/resources/com/jayrodharv/digitaldesigner/main-view.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jayrodharv.digitaldesigner.MainController">
-    <fx:include source="main-menu-bar.fxml"/>
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jayrodharv.digitaldesigner.MainController">
+  <fx:include source="main-menu-bar.fxml"/>
+  <fx:include source="main-toolbar.fxml"/>
     <Label fx:id="welcomeText" />
     <Button onAction="#onHelloButtonClick" text="Hello!" />
 </VBox>
